# algoproject

./: .algokit.toml  Algo-project.code-workspace  README.md
.algokit/: .copier-answers.yml
projects/: package-lock.json  package.json
projects/Algo-project-contracts/: .algokit.toml  README.md  package-lock.json  pyproject.toml
projects/Algo-project-contracts/.algokit/: .copier-answers.yml
projects/Algo-project-frontend/: .algokit.toml  README.md  package-lock.json  package.json
projects/Algo-project-frontend/.algokit/: .copier-answers.yml
projects/Algo-project-frontend/src/: App.tsx
